@@ -5,7 +5,9 @@ import urllib2
 import BaseHTTPServer
 import unittest
 import hashlib
+
 from test import test_support
+
 mimetools = test_support.import_module('mimetools', deprecated=True)
 threading = test_support.import_module('threading')
 
@@ -345,6 +347,12 @@ class TestUrlopen(BaseTestCase):
     tests exercising the optional 'data' and 'proxies' arguments.  No tests
     for transparent redirection have been written.
     """
+
+    def setUp(self):
+        proxy_handler = urllib2.ProxyHandler({})
+        opener = urllib2.build_opener(proxy_handler)
+        urllib2.install_opener(opener)
+        super(TestUrlopen, self).setUp()
 
     def start_server(self, responses):
         handler = GetRequestHandler(responses)
